tests/errors/syn_expr_bodied_fun_no_ret_type.kt
// k0 does not accept expression bodied functions; must have block
fun greet(name: String) = "Hello, $name!"